other/aaabc/ingress-nginx/hdms-ingress.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hdms-ingress
  namespace: ingress-nginx
  annotations:
spec:
  rules:
  - host: hdms-cn.navinfo.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: webportal
            port:
              number: 8002
      - path: /hadauth
